--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,15 @@ language: node_js
 node_js:
   - "stable"
   - "node"
+  - "lts/*"
+  - "12"
+  - "11"
+  - "10"
   - "9"
   - "8"
   - "7"
   - "6"
   - "5"
   - "4"
-  - "3"
-  - "2"
-  - "1"
-  - "0"
 
 after_success: yarn test:coverage:report
