--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"./*.{js,jsx,ts,tsx}\" \"./src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "tslint -c ./tslint.json \"src/**/*\"",
     "lint:fix": "tslint --fix -c ./tslint.json \"src/**/*\"",
+    "precommit": "yarn all",
     "prepublish": "yarn all",
     "reinstall": "rm -rf ./node_modules yarn.lock && yarn",
     "start": "yarn test",
