--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:coverage:report": "jest --coverage && cat ./coverage/lcov.info | coveralls",
     "test:watch": "jest --watch"
   },
+  "pre-commit": "precommit",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/joonhocho/ts-jutil.git"
@@ -41,6 +42,7 @@
     "@types/node": "^12.0.2",
     "coveralls": "^3.0.3",
     "jest": "^24.8.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.17.1",
     "ts-jest": "^24.0.2",
     "tscpaths": "^0.0.9",
