--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
+    "all": "yarn clean && yarn format && yarn lint:fix && yarn test && yarn build",
     "build": "tsc -p ./tsconfig.json && tscpaths -p ./tsconfig.json -s ./src -o ./lib",
     "clean": "rm -rf ./lib ./coverage",
     "format": "prettier --write \"./*.{js,jsx,ts,tsx}\" \"./src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "tslint -c ./tslint.json \"src/**/*\"",
     "lint:fix": "tslint --fix -c ./tslint.json \"src/**/*\"",
-    "precommit": "yarn rerun",
+    "precommit": "yarn all",
+    "prepublish": "yarn all",
     "reinstall": "rm -rf ./node_modules yarn.lock && yarn",
-    "rerun": "yarn clean && yarn format && yarn lint:fix && yarn test && yarn build",
     "start": "yarn test",
     "test": "jest",
     "test:coverage": "jest --coverage",
