--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 language: node_js
 
 node_js:
-  - "5"
-  - "4"
+  - "node"
+  - "lts/*"
+  - "12"
+  - "11"
+  - "10"
+  - "9"
+  - "8"
+  - "7"
+  - "6"
 
 after_success: yarn test:coverage:report
