--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "ts-jutil",
-  "version": "0.0.38",
+  "version": "0.0.39",
   "description": "TypeScript library of simple utility functions",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "all": "yarn clean && yarn format && yarn lint:fix && yarn test && yarn build",
+    "all": "yarn clean && yarn format && yarn lint:fix && yarn test && yarn build && yarn build:es5",
     "build": "tsc -p ./tsconfig.json && tscpaths -p ./tsconfig.json -s ./src -o ./lib",
+    "build:es5": "tsc -p ./tsconfig.es5.json && tscpaths -p ./tsconfig.es5.json -s ./src -o ./es5",
     "clean": "rm -rf ./lib ./coverage",
     "format": "prettier --write \"./*.{js,jsx,ts,tsx}\" \"./src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "tslint -c ./tslint.json \"src/**/*\"",
     "lint:fix": "tslint --fix -c ./tslint.json \"src/**/*\"",
     "precommit": "yarn all",
-    "prepublish": "yarn all",
     "reinstall": "rm -rf ./node_modules yarn.lock && yarn",
     "start": "yarn test",
     "test": "jest",
