--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "all": "yarn clean && yarn format && yarn lint:fix && yarn test && yarn build && yarn build:es5",
     "build": "tsc -p ./tsconfig.json && tscpaths -p ./tsconfig.json -s ./src -o ./lib",
     "build:es5": "tsc -p ./tsconfig.es5.json && tscpaths -p ./tsconfig.es5.json -s ./src -o ./es5",
-    "clean": "rm -rf ./lib ./coverage",
+    "clean": "rm -rf ./lib ./es5 ./coverage",
     "format": "prettier --write \"./*.{js,jsx,ts,tsx}\" \"./src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "tslint -c ./tslint.json \"src/**/*\"",
     "lint:fix": "tslint --fix -c ./tslint.json \"src/**/*\"",
