--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "tslint -c ./tslint.json \"src/**/*\"",
     "lint:fix": "tslint --fix -c ./tslint.json \"src/**/*\"",
     "precommit": "yarn all",
+    "prepublish": "yarn all",
     "reinstall": "rm -rf ./node_modules yarn.lock && yarn",
     "start": "yarn test",
     "test": "jest",
