--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "all": "yarn clean && yarn format && yarn lint:fix && yarn test && yarn build && yarn build:es5",
+    "all": "npm run clean && npm run format && npm run lint:fix && npm run test && npm run build && npm run build:es5",
     "build": "tsc -p ./tsconfig.json && tscpaths -p ./tsconfig.json -s ./src -o ./lib",
     "build:es5": "tsc -p ./tsconfig.es5.json && tscpaths -p ./tsconfig.es5.json -s ./src -o ./es5",
     "clean": "rm -rf ./lib ./es5 ./coverage",
     "format": "prettier --write \"./*.{js,jsx,ts,tsx}\" \"./src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "tslint -c ./tslint.json \"src/**/*\"",
     "lint:fix": "tslint --fix -c ./tslint.json \"src/**/*\"",
-    "precommit": "yarn all",
-    "prepublish": "yarn all",
-    "reinstall": "rm -rf ./node_modules yarn.lock && yarn",
-    "start": "yarn test",
+    "precommit": "npm run all",
+    "prepublish": "npm run all",
+    "reinstall": "rm -rf ./node_modules ./package-lock.json ./yarn.lock && npm i",
+    "start": "npm run test",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:coverage:report": "jest --coverage && cat ./coverage/lcov.info | coveralls",
@@ -40,14 +40,14 @@
   "homepage": "https://github.com/joonhocho/ts-jutil#readme",
   "devDependencies": {
     "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.4",
-    "coveralls": "^3.0.3",
+    "@types/node": "^12.0.5",
+    "coveralls": "^3.0.4",
     "jest": "^24.8.0",
     "pre-commit": "^1.2.2",
     "prettier": "^1.17.1",
     "ts-jest": "^24.0.2",
     "tscpaths": "^0.0.9",
-    "tsdef": "^0.0.7",
+    "tsdef": "^0.0.8",
     "tslint": "^5.17.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
