--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "all": "npm run clean && npm run format && npm run lint:fix && npm run test && npm run build && npm run build:es5",
     "build": "tsc -p ./tsconfig.json && tscpaths -p ./tsconfig.json -s ./src -o ./lib",
     "build:es5": "tsc -p ./tsconfig.es5.json && tscpaths -p ./tsconfig.es5.json -s ./src -o ./es5",
-    "clean": "rm -rf ./lib ./es5 ./coverage",
+    "clean": "rm -rf ./lib ./es5 ./es6 ./coverage",
     "format": "prettier --write \"./*.{js,jsx,ts,tsx}\" \"./src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "tslint -c ./tslint.json \"src/**/*\"",
     "lint:fix": "tslint --fix -c ./tslint.json \"src/**/*\"",
@@ -39,8 +39,8 @@
   },
   "homepage": "https://github.com/joonhocho/ts-jutil#readme",
   "devDependencies": {
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.7",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.0.8",
     "coveralls": "^3.0.4",
     "jest": "^24.8.0",
     "pre-commit": "^1.2.2",
@@ -51,6 +51,6 @@
     "tslint": "^5.17.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.2"
   }
 }
