WIP create index files

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:node": "tsc -p ./tsconfig.node.json && tscpaths -p ./tsconfig.node.json -s ./src -o ./dist/node",
     "clean": "rm -rf ./lib ./dist ./coverage",
     "format": "prettier --write \"./*.{js,jsx,ts,tsx}\" \"./src/**/*.{js,jsx,ts,tsx}\"",
-    "lint": "tslint -c ./tslint.json \"src/**/*\"",
+    "lint": "tslint -c ./tslint.json \"src/**/*.ts\"",
     "lint:fix": "tslint --fix -c ./tslint.json \"src/**/*.ts\"",
     "precommit": "npm run all",
     "prepublish": "npm run all",
@@ -55,9 +55,13 @@
     "tslint": "^5.18.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
+    "tstf": "^0.0.6",
     "typescript": "^3.5.3"
   },
   "engines": {
     "node": ">=8.0.0"
+  },
+  "peerDependencies": {
+    "tslib": "^1.10.0"
   }
 }
