--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-jutil",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "TypeScript library of simple utility functions",
   "keywords": [
     "TypeScript",
@@ -63,5 +63,6 @@
   },
   "engines": {
     "node": ">=8.0.0"
-  }
+  },
+  "sideEffects": false
 }
