--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-jutil",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "TypeScript library of simple utility functions",
   "keywords": [
     "TypeScript",
@@ -24,11 +24,12 @@
   "types": "lib/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "all": "npm run clean && npm run format && npm run lint:fix && npm run build:all && npm run test",
+    "all": "npm run clean && npm run build:index && npm run format && npm run lint:fix && npm run build:all && npm run test",
     "build:all": "npm run build:module && npm run build:node && npm run build:browser",
     "build:browser": "tsc -p ./tsconfig.browser.json && tscpaths -p ./tsconfig.browser.json -s ./src -o ./dist/browser",
     "build:module": "tsc -p ./tsconfig.module.json && tscpaths -p ./tsconfig.module.json -s ./src -o ./lib",
     "build:node": "tsc -p ./tsconfig.node.json && tscpaths -p ./tsconfig.node.json -s ./src -o ./dist/node",
+    "build:index": "tstf genIndex -o src/index.ts -w",
     "clean": "rm -rf ./lib ./dist ./coverage",
     "format": "prettier --write \"./*.{js,jsx,ts,tsx}\" \"./src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "tslint -c ./tslint.json \"src/**/*.ts\"",
@@ -48,7 +49,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.16",
-    "@types/node": "^12.6.8",
+    "@types/node": "^12.6.9",
     "coveralls": "^3.0.5",
     "jest": "^24.8.0",
     "pre-commit": "^1.2.2",
@@ -59,6 +60,7 @@
     "tslint": "^5.18.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
+    "tstf": "^0.0.21",
     "typescript": "^3.5.3"
   },
   "engines": {
